[package]
name = "u701-interupt-buttons"
version = "0.1.0"
authors = ["Linus Oleander <linus@oleander.io>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync",  "esp-idf-svc/embassy-time-driver"]

# esp32c3-hal = "*"
# esp-println = { version = "0.7.1", features = ["esp32c3"] }

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false, features = ["nightly", "critical-section"] }
critical-section = "1.1.2"
esp-println = { version = "0.7.1", features = ["esp32"] }
anyhow = "1.0.75"
# riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
# critical-section = { version = "1.1.2", features = ["restore-state-none"], default-features = false }
# embedded-hal = "*"

[build-dependencies]
embuild = "0.31.4"
