[package]
name = "u701-interupt-buttons"
version = "0.1.0"
authors = ["Linus Oleander <linus@oleander.io>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

# [features]
# default = ["std", "embassy", "esp-idf-svc/native"]

# pio = ["esp-idf-svc/pio"]
# std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
# alloc = ["esp-idf-svc/alloc"]
# nightly = ["esp-idf-svc/nightly"]
# experimental = ["esp-idf-svc/experimental"]
# embassy = ["esp-idf-svc/embassy-sync",  "esp-idf-svc/embassy-time-driver"]


[dependencies]
log = { version = "0.4", default-features = false }
lazy_static = "1.4.0"
anyhow = "1.0.75"

[target.'cfg(target_arch = "xtensa")'.dependencies]
critical-section = { version = "1.1.2", default-features = true }
# esp-idf-svc = { version = "0.47.3", default-features = true, features = ["nightly", "critical-section"] }
# esp32-hal = { version = "*", features = [ "rt", "vectored"] }
esp-println = { version = "0.7.1", features = ["esp32"] }
esp32-nimble = "0.4.0"
esp32-hal = "*"
nb = "1.0.0"
# embedded-hal = "*"

[target.'cfg(target_arch = "riscv")'.dependencies]
critical-section = "1.1.2"
# esp-idf-svc = { version = "0.47.3", default-features = false, features = ["nightly", "critical-section"] }
# critical-section = { version = "1.1.2", features = ["restore-state-none"], default-features = false }
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
esp-println = { version = "0.7.1", features = ["esp32c3"] }
embedded-hal = "*"
esp32c3-hal = "*"

[build-dependencies]
embuild = "0.31.4"
