[package]
authors = ["Linus Oleander <linus@oleander.io>"]
name = "u701-interupt-buttons"
rust-version = "1.71"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = "z"
debug = true

[dependencies]
log = { version = "0.4", default-features = false }
compiler_builtins = "0.1.105"
lazy_static = "1.4.0"
anyhow = "1.0.75"
button-driver = { version = "0.1.3", features = ["std", "esp"] }
concat-idents = "1.1.5"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-svc = { version = "0.47.3", default-features = true, features = ["nightly", "critical-section", "embassy-time-driver"] }
critical-section = { version = "1.1.2", default-features = true }
esp-println = { version = "0.7.1", features = ["esp32"] }
esp32-nimble = "0.4.0"

# [target.'cfg(target_arch = "riscv")'.dependencies]
# esp-idf-svc = { version = "0.47.3", default-features = false, features = ["nightly", "critical-section"] }
# critical-section = { version = "1.1.2", features = ["restore-state-none"], default-features = false }
# riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
# esp-println = { version = "0.7.1", features = ["esp32c3"] }
# embedded-hal = "*"
# esp32c3-hal = "*"

[build-dependencies]
embuild = "0.31.4"
